--- a/pages/001-suckless-site.cfg
+++ b/pages/001-suckless-site.cfg
@@ -1,5 +1,5 @@
 filename = suckless.html
-title = Why this site suckless
+title = Why this site is suckless
 description = Boring stuff about this 
 keywords = suckless
 created = 2022-07-11
