--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-        "build": "yum install wget; wget https://codemadness.org/releases/saait/saait-0.8.tar.gz; tar zxvf ./saait-0.8.tar.gz; cd saait-0.8; make; cd .. ; PATH=./saait-0.8/:$PATH ./gen.sh; mv output public"
+        "build": "pushd ./build; sh build.sh; popd"
     }
 }
 
