--- a/config.cfg
+++ b/config.cfg
@@ -4,9 +4,9 @@
 siteupdated = 2022-07-11
 
 # site title (part of page ${title} probably).
-sitetitle = _
+sitetitle = me.0xffff.me
 # prefix site url.
-siteurl = http://_.0xffff.me
+siteurl = https://me.0xffff.me
 # site mail used for contact "mail link".
 sitemail = i@AT@huangdx.DOT.net
 # site generator.
@@ -21,7 +21,7 @@ author = c4pt0r
 # site keywords (global default), don't use too many.
 keywords = blog, dwm-hiltjo, stagit, stagit-gopher
 # site description (global default).
-description = boring blog
+description = a boring blog
 
 # default title.
 title = coredump
