--- a/pages/015-why-serverless-db-part-1.cfg
+++ b/pages/015-why-serverless-db-part-1.cfg
@@ -1,5 +1,5 @@
 filename = why-serverless-db-part-1.html
-title = Why Serverless Databases?
+title = One Year with TiDB Serverless - Part - I
 description = 
 keywords = serverless db database tidb
 created = 2024-10-07
