--- a/config.cfg
+++ b/config.cfg
@@ -4,7 +4,7 @@
 siteupdated = 2022-07-11
 
 # site title (part of page ${title} probably).
-sitetitle = me.0xffff.me
+sitetitle = cn.0xffff.me
 # prefix site url.
 siteurl = https://me.0xffff.me
 # site mail used for contact "mail link".
@@ -17,7 +17,7 @@ sitegenerator = saait (https://git.codemadness.org/saait/file/README.html)
 # page language.
 lang = en
 # author (global default).
-author = c4pt0r
+author = dongxu
 # site keywords (global default), don't use too many.
 keywords = blog, dwm-hiltjo, stagit, stagit-gopher
 # site description (global default).
