--- a/config.cfg
+++ b/config.cfg
@@ -6,7 +6,7 @@ siteupdated = 2022-07-11
 # site title (part of page ${title} probably).
 sitetitle = cn.0xffff.me
 # prefix site url.
-siteurl = https://me.0xffff.me
+siteurl = https://cn.0xffff.me
 # site mail used for contact "mail link".
 sitemail = i@AT@huangdx.DOT.net
 # site generator.
